Listen to signalAlbumsCleared in AlbumHistory

BUG: 272586